# ros2-educating

./: .gitignore  README.md  TESTING.md  clean_log  commands.md  create_package  get_clean_log  integration_test.xml
.github/workflows/: ci.yml
src/udemy_ros2_pkg/: CMakeLists.txt  package.xml
src/udemy_ros2_pkg/action/: Navigate.action
src/udemy_ros2_pkg/launch/: rpm_node.launch.py  rpm_speed.launch.py  wheeled_model_enhanced_simulation.launch.py  wheeled_model_simulation.launch.py
src/udemy_ros2_pkg/models/ground_plane/: ground_plane.sdf  model.config
src/udemy_ros2_pkg/models/wheel_model_enhanced/: model.config  model.sdf
src/udemy_ros2_pkg/models/wheeled_model/: model.config  wheeled_model.sdf
src/udemy_ros2_pkg/models/wheeled_model_enhanced/: model.config  model.sdf  wheeled_model_enhanced.sdf
src/udemy_ros2_pkg/src/: action_client.cpp  action_server.cpp  publisher.cpp  rpm_publisher.cpp  service_client.cpp  service_server.cpp  speed_publisher.cpp  subscriber.cpp  turn_service_client.cpp  turn_service_server.cpp
src/udemy_ros2_pkg/srv/: OddEvenCheck.srv  Turn.srv
src/udemy_ros2_pkg/worlds/: test_sim.config  test_world.sdf  wheel_model_enhanced_world.sdf  wheeled_model_enhanced_world.sdf  wheeled_model_world.sdf
src/wheeled_model_enhanced/: .clang-format  CMakeLists.txt  package.xml
src/wheeled_model_enhanced/action/: ReachGoal.action
src/wheeled_model_enhanced/include/wheeled_model_enhanced/: pos.hpp  storage.hpp  types.hpp  utils.hpp
src/wheeled_model_enhanced/include/wheeled_model_enhanced/types/: cartesian.hpp  degree.hpp  kilometer.hpp  meter.hpp  optional.hpp  plane.hpp  pos.hpp  radian.hpp  vector3d.hpp
src/wheeled_model_enhanced/launch/: integration_test.launch.py  wheeled_model_enhanced_simulation.launch.py
src/wheeled_model_enhanced/models/ground_plane/: model.config
src/wheeled_model_enhanced/models/waypoint/: model.config  waypoint.sdf
src/wheeled_model_enhanced/models/wheeled_model_enhanced/: model.config  wheeled_model_enhanced.sdf
src/wheeled_model_enhanced/src/: integration_test.cpp  reach_goal_action_client.cpp  reach_goal_action_server.cpp  storage.cpp
src/wheeled_model_enhanced/test/: storage_test.cpp  tutorial_test.cpp  types_test.cpp  utils_test.cpp
src/wheeled_model_enhanced/test/types/: cartesian_test.cpp  degree_test.cpp  kilometer_test.cpp  meter_test.cpp  optional_test.cpp  plane_test.cpp  pos_test.cpp  radian_test.cpp  vector3d_test.cpp
src/wheeled_model_enhanced/worlds/: wheeled_model_enhanced_world.sdf
